first attempt to get rid of lobid 1 metadata