@@ -16,6 +16,8 @@
  */
 package authenticate;
 
+import java.util.Base64;
+
 import models.Globals;
 import play.Play;
 import play.libs.F;
@@ -62,7 +64,7 @@ public class BasicAuthAction extends Action<BasicAuth> {
 		}
 
 		String auth = authHeader.substring(6);
-		byte[] decodedAuth = new sun.misc.BASE64Decoder().decodeBuffer(auth);
+		byte[] decodedAuth = Base64.getMimeDecoder().decode(auth);
 		String[] credString = new String(decodedAuth, "UTF-8").split(":");
 
 		if (credString == null || credString.length != 2) {
